@@ -1,7 +1,14 @@
-Thu Jul 02 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
+Mon Aug 20 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
+	- Implemented 64-bit seeking to support files larger than 2GiB
+
+Tue Aug 14 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
+	- Added the nogui windows build target
+	- Implemented initial test framework
+
+Thu Aug 02 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
 	- FreeBSD implementation
 
-Wed Jul 01 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
+Wed Aug 01 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
 	- Fixed some spelling mistakes :P
 
 Tue Jun 26 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
